<resources>
    <string name="app_name">Inventory Tracker</string>
    <string name="itemsActivity">Items</string>
    <string name="detailedInfo">Detailed Info</string>

    //Headers Add Edit
    <string name="addItemHeader">Add New Item</string>
    <string name="editItemHeader">Edit Item</string>

    //EmptyView
    <string name="instructionOneEmptyView">You do not have any items yet.</string>
    <string name="instructionTwoEmptyView">Add new item.</string>

    //For XML
    <string name="uploadPhoto">Upload Photo</string>
    <string name="priceDetailed">Price: $</string>
    <string name="quantityDetailed">Quantity:</string>
    <string name="orderButton">Order Item</string>
    <string name="sellButton">Sell Item</string>

    //For ArrayList menu
    <string name="items">Items</string>
    <string name="suppliers">Suppliers</string>
    <string name="customers">Customers</string>
    <string name="purchaseOrder">Purchase Order</string>
    <string name="saleOrder">Sell Order</string>
    <string name="activityHistory">Activity History</string>

    //For Edit/Add Item
    <string name="itemName">Name</string>
    <string name="itemQuantity">Quantity</string>
    <string name="itemPrice">Price</string>
    <string name="itemDescription">Description</string>
    <string name="itemInfo">General Information</string>

    //For detailed_item_menu
    <string name="editItem">Edit Item</string>
    <string name="deleteItem">Delete Item</string>

    //For Alert Dialog
    <string name="dialogQuestion">Do you want to delete this item?</string>
    <string name="dialogDelete">Delete</string>
    <string name="dialogCancel">Cancel</string>

    //For rest activities
    <string name="suppliersActivity">Here is suppliers information</string>
    <string name="customersActivity">Here is customers information</string>
    <string name="purchaseActivity">Here is purchase forms</string>
    <string name="saleActivity">Here is sell forms</string>
    <string name="historyActivity">Here is information regarding orders and sales</string>

    //On top name
    <string name="suppliersName">Suppliers</string>
    <string name="customersName">Customers</string>
    <string name="purchaseName">Purchase Forms</string>
    <string name="saleName">Sell Forms</string>
    <string name="historyName">History</string>

    //Quantity chooser sell/order
    <string name="sell_orderChooser">Please set quantity to sell/order:</string>
</resources>
