<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_detailed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="26dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/item_detailed_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/item_detailed_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priceDetailed"
                        android:textColor="#212121"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantityDetailed"
                        android:textColor="#212121"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:id="@+id/item_detailed_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#BF360C"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/item_detailed_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#1B5E20"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sell_orderChooser"
                    android:textColor="#212121"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/quantityChooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="14dp">

                <Button
                    android:id="@+id/order_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFB74D"
                    android:text="@string/orderButton"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:onClick="orderItem"/>

                <Button
                    android:id="@+id/sell_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFB74D"
                    android:text="@string/sellButton"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:onClick="sellItem"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>